# plugin-computer-use

./: .gitignore  LICENSE  README.md  plugin.json  pyproject.toml  run_tests.sh
docs/: computer-use-mcp-tools-schema.md
scripts/: build_manifest.py
src/: computer.py  server.py  tools.py
tests/: test_dispatch_base.py  test_manifest.py  test_stdio_roundtrip.py
